--- a/GD.FinishingSystem.WEB/Views/Rulo/Details.cshtml
+++ b/GD.FinishingSystem.WEB/Views/Rulo/Details.cshtml
@@ -98,6 +98,12 @@
             @Html.DisplayFor(model => model.IsWaitingAnswerFromTest)
         </dd>
         <dt class="col-sm-2">
+            @Html.DisplayNameFor(model => model.MainOriginCode)
+        </dt>
+        <dd class="col-sm-10">
+            @Html.DisplayFor(model => model.MainOriginCode)
+        </dd>
+        <dt class="col-sm-2">
             @Html.DisplayNameFor(model => model.OriginCode)
         </dt>
         <dd class="col-sm-10">
