--- a/GD.FinishingSystem.WEB/Views/Rulo/Delete.cshtml
+++ b/GD.FinishingSystem.WEB/Views/Rulo/Delete.cshtml
@@ -47,7 +47,7 @@
         </dt>
         <dd class="col-sm-10">
             @*@Html.Raw(Model.IsToyota ? "YES" : "NO");*@
-            @Html.DisplayFor(model => model.IsToyota);
+            @Html.DisplayFor(model => model.IsToyota)
         </dd>
         <dt class="col-sm-2">
             @Html.DisplayNameFor(model => model.PieceCount)
@@ -105,6 +105,12 @@
             @Html.DisplayFor(model=> model.IsWaitingAnswerFromTest)
         </dd>
         <dt class="col-sm-2">
+            @Html.DisplayNameFor(model => model.MainOriginCode)
+        </dt>
+        <dd class="col-sm-10">
+            @Html.DisplayFor(model => model.MainOriginCode)
+        </dd>
+        <dt class="col-sm-2">
             @Html.DisplayNameFor(model => model.OriginCode)
         </dt>
         <dd class="col-sm-10">
@@ -151,6 +157,16 @@
         </dd>
 
     </dl>
+
+    <div class="col-12">
+        @if ((bool)ViewBag.Error)
+        {
+            <hr />
+            <div class="alert alert-danger">
+                @Html.Raw(ViewBag.ErrorMessage)
+            </div>
+        }
+    </div>
 
     <form asp-action="Delete">
         @Html.HiddenFor(model => model.RuloID)
