--- a/GD.FinishingSystem.WEB/Views/Rulo/Index.cshtml
+++ b/GD.FinishingSystem.WEB/Views/Rulo/Index.cshtml
@@ -43,8 +43,8 @@
             <div class="form-group">
                 <label for="dtEnd">End</label><br>
                 <input type="datetime-local" style="width:100% !important;" id="dtEnd" name="dtEnd">
-                <div style ="width:100% !important;"><label><input type="radio" id="RealDate" name="EndDateType" onclick="changeDate(1);" value="Real Date" checked /> Real Date</label>
-                <label><input type="radio" id="AccountingDate" name="EndDateType" onclick="changeDate(2);" value="Accounting Date" /> Accounting Date</label></div>
+@*              <div style ="width:100% !important;"><label><input type="radio" id="RealDate" name="EndDateType" onclick="changeDate(1);" value="Real Date" checked /> Real Date</label>
+                <label><input type="radio" id="AccountingDate" name="EndDateType" onclick="changeDate(2);" value="Accounting Date" /> Accounting Date</label></div>*@
                 <input type="hidden" id="isAccountingDate" name="isAccountingDate" />
             </div>
         </div>
@@ -137,20 +137,22 @@
             <th colspan="16">
                 <div>
                     Rulo List
-                    @if (User.IsInRole("Authorize", AuthType.Full))
+@*                    @if (User.IsInRole("Authorize", AuthType.Full))
                     {
                         <a onclick="exportToWarehouseStock();" class="btn btn-sm btn-info"><i class="far fa-file-excel"></i> Warehouses Stock</a>
-                    }
-                    <a id="btnExportToExcel" onclick="exportToExcel();" class="btn btn-sm btn-success"><i class="far fa-file-excel"></i> Export to Excel</a>
+                    }*@
+
+@*                    <a id="btnExportToExcel" onclick="exportToExcel();" class="btn btn-sm btn-success"><i class="far fa-file-excel"></i> Finishing Fabric Detailed Report</a>
                     <Label><input id="chkWithBatchesTmp" type="checkbox" name="chkWithBatchesTmp" onclick="chageWithBatches();" />Report with Batches</Label>
-                    @if (User.IsInRole("Authorize", AuthType.Full))
+*@
+@*                   @if (User.IsInRole("Authorize", AuthType.Full))
                     {
                     <a onclick="exportToExcelAllStock();" class="btn btn-sm btn-danger"><i class="far fa-file-excel"></i> Export All Stock</a>
                     }
                     @if (User.IsInRole("PerformanceTestReport", AuthType.Show) || User.IsInRole("PerformanceTestReport", AuthType.Full) || User.IsInRole("Admin", AuthType.Full))
 	                {
                     <a onclick="exportToExcelPerformanceTestReport();" class="btn btn-sm btn-info"><i class="far fa-file-excel"></i> Export Performance Test</a>
-	                }
+	                }*@
                 </div>
             </th>
         </tr>
@@ -178,6 +180,9 @@
             </th>
             <th>
                 @Html.DisplayNameFor(model => model.VMRuloList[0].Machine)
+            </th>
+            <th>
+                @Html.DisplayNameFor(model => model.VMRuloList[0].MainOriginCode)
             </th>
             <th>
                 @Html.DisplayNameFor(model => model.VMRuloList[0].OriginCode)
@@ -404,6 +409,9 @@
                 <div style="display:block;width:100;">
                     @Html.DisplayFor(modelItem => item.Machine)
                 </div>
+            </td>
+            <td>
+                @Html.DisplayFor(modelItem => item.MainOriginCode)
             </td>
             <td>
                 @Html.DisplayFor(modelItem => item.OriginCode)
