--- a/GD.FinishingSystem.WEB/Views/RuloProcess/GetRulo.cshtml
+++ b/GD.FinishingSystem.WEB/Views/RuloProcess/GetRulo.cshtml
@@ -102,6 +102,12 @@
             @Html.DisplayFor(model => model.TestCategoryCode)
         </dd>
         <dt class="col-sm-4">
+            @Html.DisplayNameFor(model => model.MainOriginCode)
+        </dt>
+        <dd class="col-sm-6">
+            @Html.DisplayFor(model => model.MainOriginCode)
+        </dd>
+        <dt class="col-sm-4">
             @Html.DisplayNameFor(model => model.OriginCode)
         </dt>
         <dd class="col-sm-6">
