A bug was corrected when creating a single Rulo from the Raw Screen because it pulled by lote, beam, but the loom was missing. Added All The Information From Raw Fabric report. 11-21-2023 v3.0.3

--- a/GD.FinishingSystem.WEB/Views/RawReport/Index.cshtml
+++ b/GD.FinishingSystem.WEB/Views/RawReport/Index.cshtml
@@ -86,6 +86,13 @@
                 <label for="rawFabricStock" style="font-size: x-large">Raw Fabric Stock</label>
             </div>
         </div>
+
+        <div class="col-md-12">
+            <div class="form-group">
+                <input type="radio" id="allTheInformationFromRawFabric" name="typeReport" value="3" style="zoom: 1.5">
+                <label for="allTheInformationFromRawFabric" style="font-size: x-large">All The Information From Raw Fabric</label>
+            </div>
+        </div>
     </div>
 
     <div class="row">
