It was changed the report to see the Raw Fabric Processed by Dates. Date 24-11-2023 v3.0.3

--- a/GD.FinishingSystem.WEB/Views/RawReport/Index.cshtml
+++ b/GD.FinishingSystem.WEB/Views/RawReport/Index.cshtml
@@ -89,8 +89,8 @@
 
         <div class="col-md-12">
             <div class="form-group">
-                <input type="radio" id="allTheInformationFromRawFabric" name="typeReport" value="3" style="zoom: 1.5">
-                <label for="allTheInformationFromRawFabric" style="font-size: x-large">All The Information From Raw Fabric</label>
+                <input type="radio" id="finishedProcessRawFabric" name="typeReport" value="3" style="zoom: 1.5">
+                <label for="finishedProcessRawFabric" style="font-size: x-large">Finished Process Raw Fabric</label>
             </div>
         </div>
     </div>
